fixed : align login, sign up page, change dir name

--- a/public/style.css
+++ b/public/style.css
@@ -4,3 +4,10 @@ body {
   font-weight:normal;
   font-style:normal;
 }
+
+
+label {
+  display: inline-block;
+  width: 120px;
+  text-align: right;
+}​
